--- a/InTouchXamarin/App/Common/InTouch.Common.Droid/InTouch.Common.Droid.csproj
+++ b/InTouchXamarin/App/Common/InTouch.Common.Droid/InTouch.Common.Droid.csproj
@@ -61,7 +61,7 @@
     <AndroidResource Include="Resources\values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Acquaint.Abstractions\InTouch.Abstractions.csproj">
+    <ProjectReference Include="..\InTouch.Abstractions\InTouch.Abstractions.csproj">
       <Project>{0B984675-688B-41C6-BEB7-D104DE9158C3}</Project>
       <Name>InTouch.Abstractions</Name>
     </ProjectReference>
