--- a/InTouchXamarin/App/Common/InTouch.Data/InTouch.Data.csproj
+++ b/InTouchXamarin/App/Common/InTouch.Data/InTouch.Data.csproj
@@ -100,21 +100,21 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Acquaint.Util\Acquaint.Util.csproj">
-      <Project>{1D18D929-1B53-4AF9-9499-14ABB26D257F}</Project>
-      <Name>InTouch.Util</Name>
+    <ProjectReference Include="..\..\..\Common\InTouch.ModelContracts\InTouch.ModelContracts.csproj">
+      <Project>{ED10B823-AA77-4142-919F-6A42C4D087A9}</Project>
+      <Name>InTouch.ModelContracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Acquaint.Models\Acquaint.Models.csproj">
-      <Project>{2C4B0766-DF89-4466-B841-0BA58FD9D19B}</Project>
-      <Name>InTouch.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Acquaint.Abstractions\Acquaint.Abstractions.csproj">
+    <ProjectReference Include="..\InTouch.Abstractions\InTouch.Abstractions.csproj">
       <Project>{0B984675-688B-41C6-BEB7-D104DE9158C3}</Project>
       <Name>InTouch.Abstractions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\Acquaint.ModelContracts\Acquaint.ModelContracts.csproj">
-      <Project>{ED10B823-AA77-4142-919F-6A42C4D087A9}</Project>
-      <Name>InTouch.ModelContracts</Name>
+    <ProjectReference Include="..\InTouch.Models\InTouch.Models.csproj">
+      <Project>{2C4B0766-DF89-4466-B841-0BA58FD9D19B}</Project>
+      <Name>InTouch.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InTouch.Util\InTouch.Util.csproj">
+      <Project>{1D18D929-1B53-4AF9-9499-14ABB26D257F}</Project>
+      <Name>InTouch.Util</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
