--- a/InTouchXamarin/App/InTouch.Native/InTouch.Native.Droid/InTouch.Native.Droid.csproj
+++ b/InTouchXamarin/App/InTouch.Native/InTouch.Native.Droid/InTouch.Native.Droid.csproj
@@ -320,25 +320,25 @@
       <Project>{5A3530AB-4053-4CF3-BEDE-A3E04C45D255}</Project>
       <Name>InTouch.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Acquaint.Util\Acquaint.Util.csproj">
-      <Project>{1D18D929-1B53-4AF9-9499-14ABB26D257F}</Project>
-      <Name>InTouch.Util</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Common\Acquaint.Common.Droid\Acquaint.Common.Droid.csproj">
       <Project>{1C2073B0-B1E6-4D3B-9D10-B0F278C671E4}</Project>
       <Name>InTouch.Common.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Acquaint.Models\Acquaint.Models.csproj">
-      <Project>{2C4B0766-DF89-4466-B841-0BA58FD9D19B}</Project>
-      <Name>InTouch.Models</Name>
+    <ProjectReference Include="..\..\Common\InTouch.Util\InTouch.Util.csproj">
+      <Project>{1D18D929-1B53-4AF9-9499-14ABB26D257F}</Project>
+      <Name>InTouch.Util</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Acquaint.Abstractions\Acquaint.Abstractions.csproj">
+    <ProjectReference Include="..\..\Common\InTouch.Abstractions\InTouch.Abstractions.csproj">
       <Project>{0B984675-688B-41C6-BEB7-D104DE9158C3}</Project>
       <Name>InTouch.Abstractions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\Acquaint.ModelContracts\Acquaint.ModelContracts.csproj">
+    <ProjectReference Include="..\..\..\Common\InTouch.ModelContracts\InTouch.ModelContracts.csproj">
       <Project>{ED10B823-AA77-4142-919F-6A42C4D087A9}</Project>
       <Name>InTouch.ModelContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\InTouch.Models\InTouch.Models.csproj">
+      <Project>{2C4B0766-DF89-4466-B841-0BA58FD9D19B}</Project>
+      <Name>InTouch.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
